package ayman.issa.hostelworld.common.util

object TestTag {
    const val FeaturedHostel: String = "FeaturedHostel"
    const val PropertiesList: String = "PropertiesList"

    const val PropertiesListLoading = "PropertiesListLoading"

    const val PropertyGalleryImage = "PropertyGalleryImage"

    const val PropertyDetailsList: String = "PropertyDetailsList"

    const val BackIcon = "BackIcon"
    const val PropertyDetailsLoading = "PropertyDetailsLoading"
    const val PropertyDetailsReviewsBreakdown = "PropertyDetailsReviewsBreakdown"
    const val PropertyDetailsLocationSection = "PropertyDetailsLocationSection"
}